app/assets/stylesheets/home.scss
// Place all the styles related to the home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.user-title{
  font-family: none
}

#current-user{
  font-size: 1.75rem;
  background-color: rgba(40,40,40,0.5)
}
.list-inline-item{
}
.time,.date,.time-info{
  color:#262626;
  margin-bottom:0px
}
.time{
  font-size: 3rem;
  font-weight: bold;
}
.date{
  font-size: 1.5rem;
}

.time-info{
  font-size: 1rem;
}


.table-top{
  font-size:2rem
}

.character-name{
  font-size: 1.5rem;
  vertical-align:middle !important;
  font-weight: bold;
  padding-left:0px !important;padding-right:0px !important
}

.image-character{
  height:8rem;width:8rem;
  border-radius:50%;
}

.image-character-stats{
  height:5rem;width:5rem;
  border-radius:50%;
}


.table{
  margin-bottom: 0.1vw;
}

.table-middle{
  font-size: 1.5rem;
  margin:auto;
  width: auto
}

.tablerow1{
  background-color:(240,240,240,0.4)
}
.tablerow2{
  background-color:rgba(0, 0, 0, 0.4)
}

.character-dead,.character-walker{
}

#scum{
  color:red;
  font-size: 2.5rem;
  margin-left:1vw
}

#rules-title, #questions-title{
  font-size: 3rem;
  font-family: 'Game of Thrones';
}

.rule{
  font-size: 1.5rem;
  padding-top:1rem;
  background-color:rgba(200,200,200,0.7);
  color:black;
}

.question{
  font-size: 1.5rem;
  padding-top:0.5rem;
  background-color:rgba(200,200,200,0.2);
}
.right-side{
  font-weight: bold
}
#questions{
  padding:1rem;
  margin-top: 1rem;
  border-top: 5px double rgb(150,150,150);
}
.answer{
  font-size: 1.5rem;
  color:black;
  width:100%
}

.user-list{
  font-size: 1.5rem
}
 #user-logged-in{
   padding-bottom:4rem
}
#drink-table{
}

.position{
  min-height:40rem
}
.objects{
  min-height:20rem
}
.clock{
  min-height:10rem
}

@media only screen and (max-width: 800px) {
  .character-name{
    font-size: 2rem;
  }
  .drink {
    font-size: 3rem
  }
  .title{
    font-size: 3rem;
  }
  #current-user{
    font-size: 1.25rem
  }
  .btn-log-out{
    font-size: 1.5rem !important
  }
  .user-title{
    font-size: 2.5rem
  }

  .user-column{
    padding-left:0px !important;
    padding-right:5px !important;
  }

  .sub-title{
    font-size: 2rem
  }

  .words{
    font-size: 1rem
  }
}

@media only screen and (max-width:1440px){
  .position{
    min-height: 20rem !important;
  }
  .objects{
    min-height: 10rem !important;
  }
}

